...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/pickup_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:clickable="true"
...
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rate_driver_divider_height"
                    android:layout_below="@+id/pickup_address"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/destination_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_below="@id/address_divider"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_red"
                    android:drawablePadding="@dimen/material_padding"
                    android:gravity="center"
                    android:hint="@string/enter_destination_address"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/material_padding"
                    android:paddingRight="@dimen/material_padding"
                    android:paddingTop="4dp"
                    android:singleLine="true"
...
