...
    <string name="save">Save</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_html">text/html</string>
    <string name="scheme_text">text/plain</string>
    <string name="scheme_telephone">tel:</string>
    <string name="message_cancel_ride_error">Requested ride does not exist</string>
    <string name="update_ride_dialog_content">Do you really want to update ride destination?</string>
    <string name="update_ride_failed_dialog_content">Unable to update ride destination, please try again</string>
    <string name="text_regular_car_label">Regular</string>
    <string name="text_suv_car_label">SUV</string>
    <string name="text_luxury_car_label">Premium</string>
    <string name="text_honda_car_label">Honda</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="your_last_trip">Your Last Trip</string>
...
