...
<resources>
    <string name="money">$%s</string>
    <string name="text_date_delimiter">" - "</string>
    <string name="text_subject">Production Defect Report</string>

    <string name="error_unknown">We are experiencing technical difficulties</string>
    <string name="network_error">Something went wrong. Please check network connection.</string>
    <string name="location_timeout_error">Unable to identify your location.</string>
    <string name="error_generic">Something went wrong.</string>
    <string name="send_message_msg">Your message has been sent</string>
    <string name="send_message_title">Success</string>
    <string name="send_message_fail">Your message has failed</string>
    <string name="empty_message_error">Message can\'t be empty</string>
...
